--- a/app/src/main/res/layout/fragment_impressum.xml
+++ b/app/src/main/res/layout/fragment_impressum.xml
@@ -49,7 +49,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="@string/online_impressum"
+                        android:text="@string/impressum_online_impressum"
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -75,7 +75,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="@string/AboutLibs_Title"
+                        android:text="@string/impressum_AboutLibs_Title"
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -101,7 +101,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="@string/attribution"
+                        android:text="@string/impressum_attribution"
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -127,7 +127,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="@string/source_code"
+                        android:text="@string/impressum_source_code"
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </LinearLayout>
