--- a/app/src/main/res/layout/list_lehrerliste_entry.xml
+++ b/app/src/main/res/layout/list_lehrerliste_entry.xml
@@ -6,12 +6,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,13 +33,14 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
+                    android:id="@+id/teacher_list_linear"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:paddingEnd="5sp"
+                    android:orientation="vertical"
                     android:paddingStart="5sp"
-                    android:orientation="vertical">
+                    android:paddingEnd="5sp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -74,7 +75,8 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Sprechstunde" />
+                        android:text="öasdföjksdaölkkjlödfsdsfaklldfsaklfdsllkdfsa"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
