--- a/app/src/main/res/layout/list_lehrerliste_entry.xml
+++ b/app/src/main/res/layout/list_lehrerliste_entry.xml
@@ -75,8 +75,8 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="öasdföjksdaölkkjlödfsdsfaklldfsaklfdsllkdfsa"
-                        android:visibility="gone" />
+                        android:text="Sprechstunde"
+                        android:visibility="visible" />
 
                 </LinearLayout>
 
