--- a/app/src/main/res/layout/fragment_impressum.xml
+++ b/app/src/main/res/layout/fragment_impressum.xml
@@ -67,9 +67,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
-                        android:scaleType="fitCenter"
                         android:onClick="onClick"
-                        app:srcCompat="@drawable/ic_local_library_black_24dp" />
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/ic_books" />
 
                     <TextView
                         android:layout_width="match_parent"
