--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -2,7 +2,7 @@
 <changelog>
     <release
         version="1.0.4"
-        versionCode="104">
+        versioncode="104">
         <change>Klickbare Lehrerkürzel</change>
         <change>Durchsuchbare Lehrerliste</change>
         <change>Aktivierbare Beta-Features</change>
