Added unenabled TimePicker - little fixes

--- a/app/src/main/res/layout/activity_impressum.xml
+++ b/app/src/main/res/layout/activity_impressum.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.ImpressumActivity">
+    tools:context=".main.Activities.ImpressumActivity">
 
     <fragment
         android:id="@+id/impressumFragment"
