--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -48,17 +48,23 @@
             android:gravity="center"
             android:text="@string/login_description" />
 
-        <EditText
-            android:id="@+id/signin_username"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="24dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="24dp"
-            android:hint="@string/username_hint"
-            android:inputType="textEmailAddress"
-            android:selectAllOnFocus="true" />
+            android:layout_marginEnd="24dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signin_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/username_hint"
+                android:inputType="textEmailAddress"
+                android:selectAllOnFocus="true" />
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -74,7 +80,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password_hint"
-                android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:selectAllOnFocus="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -89,6 +94,7 @@
             android:layout_marginEnd="48dp"
             android:layout_marginBottom="16dp"
             android:enabled="false"
+            android:imeOptions="actionDone"
             android:text="@string/login_sign_in" />
 
         <LinearLayout
