--- a/app/src/main/res/layout/fragment_vertretung.xml
+++ b/app/src/main/res/layout/fragment_vertretung.xml
@@ -3,7 +3,7 @@
     android:id="@+id/vertretung_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_light_background">
+    android:background="@color/colorBackground">
 
 
     <LinearLayout
