ListView for all in VertretungFragment

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,4 +3,5 @@
     <integer name="vertretung_id">2000</integer>
     <integer name="vertretung_teacher_view_id">3000</integer>
     <integer name="teacher_list_id">2500</integer>
+    <string name="loading_tag">loading</string>
 </resources>
