--- a/app/src/main/res/layout/fragment_impressum.xml
+++ b/app/src/main/res/layout/fragment_impressum.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".main.Fragments.ImpressumFragment"
-    android:id="@+id/impressum_base">
+    tools:context=".main.Fragments.ImpressumFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
