--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.Activities.WebsiteActivity">
+    tools:context=".main.activities.WebsiteActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
