--- a/app/src/main/res/layout/fragment_contribution.xml
+++ b/app/src/main/res/layout/fragment_contribution.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.Fragments.ContributionFragment"
+    tools:context=".main.fragments.ContributionFragment"
     android:background="@color/colorBackground">
 
     <TextView
