--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group>
         <item
             android:id="@+id/nav_both"
             android:icon="@drawable/ic_today_tomorrow_black_24dp"
@@ -52,6 +52,22 @@
             </group>
         </menu>
     </item>
+
+    <item android:title="@string/menu_category_settings">
+        <menu>
+            <group android:title="@string/menu_category_settings">
+                <item
+                    android:id="@+id/nav_impressum"
+                    android:icon="@drawable/ic_info_outline_black_24dp"
+                    android:title="@string/menu_impressum" />
+                <item
+                    android:id="@+id/nav_settings"
+                    android:icon="@drawable/ic_settings_black_24dp"
+                    android:title="@string/menu_settings" />
+            </group>
+        </menu>
+    </item>
+
     <item android:title="@string/menu_category_other">
         <menu>
             <group>
@@ -69,16 +85,6 @@
                     android:icon="@drawable/ic_looks_one_black_24dp"
                     android:title="@string/menu_grades"
                     android:visible="false" />
-                <item
-                    android:id="@+id/nav_impressum"
-                    android:enabled="false"
-                    android:icon="@drawable/ic_info_outline_black_24dp"
-                    android:title="@string/menu_impressum"
-                    android:visible="false" />
-                <item
-                    android:id="@+id/nav_settings"
-                    android:icon="@drawable/ic_settings_black_24dp"
-                    android:title="@string/menu_settings" />
             </group>
         </menu>
     </item>
