--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".main.activities.SignInActivity"
+    tools:context=".ui.main.activities.SignInActivity"
     tools:showIn="@layout/activity_sign_in">
 
     <LinearLayout
