--- a/app/src/main/res/layout/fragment_lehrerliste.xml
+++ b/app/src/main/res/layout/fragment_lehrerliste.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".main.fragments.LehrerlisteFragment" />
+    tools:context=".ui.main.fragments.LehrerlisteFragment" />
