Integrated in MainActivity

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,21 +9,33 @@
             android:icon="@drawable/ic_today_tomorrow_black_24dp"
             android:title="@string/menu_both" />
         <item
+            android:id="@+id/nav_days"
+            android:icon="@drawable/ic_today_tomorrow_black_24dp"
+            android:title="@string/menu_days" />
+        <item
             android:id="@+id/nav_today"
             android:icon="@drawable/ic_today_black_24dp"
-            android:title="@string/menu_today" />
+            android:title="@string/menu_today"
+            android:visible="false"
+            android:enabled="false" />
         <item
             android:id="@+id/nav_tomorrow"
             android:icon="@drawable/ic_tomorrow_black_24dp"
-            android:title="@string/menu_tomorrow" />
+            android:title="@string/menu_tomorrow"
+            android:visible="false"
+            android:enabled="false" />
         <item
             android:id="@+id/nav_all_classes_today"
             android:icon="@drawable/ic_today_black_24dp"
-            android:title="@string/menu_all_classes_Today" />
+            android:title="@string/menu_all_classes_Today"
+            android:visible="false"
+            android:enabled="false" />
         <item
             android:id="@+id/nav_all_classes_tomorrow"
             android:icon="@drawable/ic_tomorrow_black_24dp"
-            android:title="@string/menu_all_classes_tomorrow" />
+            android:title="@string/menu_all_classes_tomorrow"
+            android:visible="false"
+            android:enabled="false" />
     </group>
 
     <item android:title="@string/menu_category_school">
