--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,9 +11,9 @@
         android:icon="@drawable/ic_view_list_black_24dp"
         android:title="@string/nav_all" />
 
-    <item
-        android:id="@+id/navigation_list"
-        android:icon="@drawable/ic_teacher_at_the_blackboard"
-        android:title="@string/nav_list" />
+    <!--    <item
+            android:id="@+id/navigation_list"
+            android:icon="@drawable/ic_teacher_at_the_blackboard"
+            android:title="@string/nav_list" />-->
 
 </menu>
