--- a/app/src/main/res/layout/list_vertretung_specific_entry.xml
+++ b/app/src/main/res/layout/list_vertretung_specific_entry.xml
@@ -12,12 +12,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:background="@color/colorAccent"
         android:gravity="center"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="1"
+        android:text="10"
         android:textColor="@android:color/white"
         android:textSize="36sp"
         android:textStyle="bold" />
@@ -28,9 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:gravity="center"
-        android:text="Aufs"
+        android:text="2P_sp"
         android:textSize="18sp"
         android:textStyle="bold" />
 
