--- a/app/src/main/res/layout/list_vertretung_all_entry.xml
+++ b/app/src/main/res/layout/list_vertretung_all_entry.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
-        android:layout_weight="3"
+        android:layout_weight="@integer/vertretung_all_course"
         android:gravity="center"
         android:text="10ceSm"
         android:textSize="18sp"
@@ -23,9 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="1"
+        android:layout_weight="@integer/vertretung_all_hour"
         android:gravity="center"
-        android:text="9"
+        android:text="10:40"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="2"
+        android:layout_weight="@integer/vertretung_all_subject"
         android:gravity="center"
         android:text="Aufs"
         android:textSize="18sp"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="2"
+        android:layout_weight="@integer/vertretung_all_teacher"
         android:gravity="center"
         android:text="SOM"
         android:textSize="18sp"
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="2"
+        android:layout_weight="@integer/vertretung_all_room"
         android:gravity="center"
         android:text="E104"
         android:textSize="18sp"
@@ -70,7 +70,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
-        android:layout_weight="4"
+        android:layout_weight="@integer/vertretung_all_other"
         android:gravity="center"
         android:text="Gottesdienst"
         android:textSize="16sp" />
