--- a/app/src/main/res/layout/list_vertretung_specific_entry.xml
+++ b/app/src/main/res/layout/list_vertretung_specific_entry.xml
@@ -12,11 +12,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
-        android:layout_weight="3"
+        android:layout_weight="@integer/vertretung_specific_entry_hour"
         android:background="@color/colorAccent"
         android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:text="10"
         android:textColor="@android:color/white"
         android:textSize="36sp"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="3"
+        android:layout_weight="@integer/vertretung_specific_entry_subject"
         android:gravity="center"
         android:text="2P_sp"
         android:textSize="18sp"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="2"
+        android:layout_weight="@integer/vertretung_specific_entry_teacher"
         android:gravity="center"
         android:text="entfällt"
         android:textSize="18sp"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="3"
+        android:layout_weight="@integer/vertretung_specific_entry_room"
         android:gravity="center"
         android:text="E104"
         android:textColor="@color/colorAccent"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
-        android:layout_weight="3"
+        android:layout_weight="@integer/vertretung_specific_entry_other"
         android:gravity="center"
         android:text="Gottesdienst"
         android:textSize="16sp"
@@ -76,7 +76,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
-        android:layout_weight="1"
+        android:layout_weight="@integer/vertretung_specific_entry_course"
         android:gravity="center"
         android:text="10ceSm"
         android:textSize="12sp" />
