--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -23,6 +23,13 @@
         android:title="@string/menu_update"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_language"
+        android:enabled="false"
+        android:orderInCategory="100"
+        android:title="@string/menu_language"
+        android:visible="false"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_changelog"
         android:orderInCategory="100"
         android:title="@string/menu_changelog"
