--- a/app/src/main/res/layout/fragment_thirdchoice.xml
+++ b/app/src/main/res/layout/fragment_thirdchoice.xml
@@ -1,49 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/choice_button_1"
+            style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_marginBottom="@dimen/choice_difference"
+            android:background="@android:color/white"
+            android:text="@string/choice_oberstufe_one" />
 
-            <Button
-                android:id="@+id/choice_button_1"
-                style="@android:style/Widget.Button"
+        <Button
+            android:id="@+id/choice_button_2"
+            style="@android:style/Widget.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/choice_difference"
+            android:background="@android:color/white"
+            android:text="@string/choice_oberstufe_two" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/choice_first_difference"
+            android:background="@android:color/white">
+
+            <EditText
+                android:id="@+id/choice_more_course_digits"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/choice_difference"
-                android:background="@android:color/white"
-                android:text="@string/choice_oberstufe_one" />
-
-            <Button
-                android:id="@+id/choice_button_2"
-                style="@android:style/Widget.Button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/choice_difference"
-                android:background="@android:color/white"
-                android:text="@string/choice_oberstufe_two" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/choice_first_difference"
-                android:background="@android:color/white">
-
-                <EditText
-                    android:id="@+id/choice_more_course_digits"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/choice_more_cours_digits"
-                    android:inputType="text"/>
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+                android:hint="@string/choice_more_cours_digits"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+</ScrollView>
