--- a/app/src/main/res/layout/list_vertretung_specific_entry.xml
+++ b/app/src/main/res/layout/list_vertretung_specific_entry.xml
@@ -15,8 +15,8 @@
         android:layout_weight="@integer/vertretung_specific_entry_hour"
         android:background="@color/colorAccent"
         android:gravity="center"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:text="10"
         android:textColor="@android:color/white"
         android:textSize="36sp"
