Added seperate sections for filtered and unfiltered in vertretungsplan

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,16 @@
                 <item
                     android:id="@+id/nav_days"
                     android:icon="@drawable/ic_today_tomorrow_black_24dp"
-                    android:title="@string/menu_days" />
+                    android:title="@string/menu_days"
+                    android:visible="false" />
+                <item
+                    android:id="@+id/nav_filtered_days"
+                    android:icon="@drawable/ic_today_tomorrow_black_24dp"
+                    android:title="@string/menu_filtered" />
+                <item
+                    android:id="@+id/nav_unfiltered_days"
+                    android:icon="@drawable/ic_today_tomorrow_black_24dp"
+                    android:title="@string/menu_unfiltered" />
             </group>
         </menu>
     </item>
