Added parts of ProfileActivity

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -3,7 +3,9 @@
     <release
         version="1.0.7"
         versioncode="107">
+        <change>Offlinemodus</change>
         <change>Seperate Buttons für gefilterten und ungefilterten Plan</change>
+        <change>Einstellung Wochentage immer anzuzeigen</change>
     </release>
     <release
         version="1.0.6"
